--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@ layout: compress
   <head>
     {% include head.html %}
     {% include head/custom.html %}
+    {% seo %}
   </head>
 
   <body>
@@ -18,7 +19,9 @@ layout: compress
       {% include sidebar.html %}
     
       <article class="page" itemscope itemtype="http://schema.org/CreativeWork">
-        {% if page.title %}<meta itemprop="headline" content="{{ page.title | markdownify | strip_html | strip_newlines | escape_once }}">{% endif %}
+        {% if page.title %}
+          <meta itemprop="headline" content="{{ page.title | markdownify | strip_html | strip_newlines | escape_once }}">
+        {% endif %}
         <div class="page__inner-wrap">
           <section class="page__content" itemprop="text">
             {{ content }}
